--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@
 					<section id="four" class="wrapper style3 fade-up">
 						<div class="inner">
 							<h2>Apply</h2>
-							<p> Joining Unruh Associates is your opportunity to connect with political professionals through on-campus events and off-campus summits and foster civic discourse through impactful student-run events and intiatives. Applications for Fall 2017 are live. </p>
+							<p> Joining Unruh Associates is your opportunity to connect with political professionals through on-campus events and off-campus summits and foster civic discourse through impactful student-run events and intiatives. Applications for Fall 2017 will be live August 30, 2017. </p>
 							<p><a href="#" class="button big fit icon fa-external-link">Apply Here!</a></li></p>
 						</div>
 
