--- a/index.html
+++ b/index.html
@@ -189,7 +189,7 @@
  
 							<b>What is the application process?</b>
 
-							<p>(1) You must attend at least one of the following Unruh events before you submit your application: Unruh Open House on August 29th at 5:30 PM OR Institute Ground Zero Panel Discussion on September 12th at 5:30 PM. If you cannot attend any event, please reach out to our e-board @ unruhassociates@gmail.com and we can accommodate your application.
+							<p>(1) You must attend at least one of the following Unruh events before you submit your application: Unruh Open House on August 29th at 5:30 PM OR Institute Ground Zero Panel Discussion on September 12th at 5:30 PM. If you cannot attend any event, please reach out to our e-board @ <a href="#">unruhassociates@gmail.com</a> and we can accommodate your application.
 
 							<br>(2) The written application is due September 18th.
 
