--- a/index.html
+++ b/index.html
@@ -215,7 +215,7 @@
 							 
 							<b>What if I have a different question?</b>
 
-							<p>Great! Shoot us an email at unruhassociates@gmail.com, and we’ll get back to you ASAP.</p>
+							<p>Great! Shoot us an email @ <a href="#">unruhassociates@gmail.com</a>, and we’ll get back to you ASAP.</p>
 							 
 							<p>We want you here! Joining Unruh Associates is your opportunity to connect with political professionals through on-campus events and off-campus summits and foster civic discourse through impactful student-run events and intiatives. Applications for Fall 2017 will be live August 30, 2017. </p>
 							<p><a href="#" class="button big fit icon fa-external-link">Apply Here!</a></li></p>
