--- a/index.html
+++ b/index.html
@@ -189,17 +189,17 @@
  
 							<b>What is the application process?</b>
 
-							<p>(1) You must attend at least one of the following Unruh events before you submit your application: Unruh Open House on August 29th at 5:30 PM OR Institute Ground Zero Panel Discussion on September 12th at 5:30 PM. If you cannot attend any event, please reach out to our e-board @ <a href="#">unruhassociates@gmail.com</a> and we can accommodate your application.
+							<p>(1) You must attend at least one of the following Unruh events before you submit your application: Unruh Open House on August 29, 2017 at 5:30 PM OR Institute Ground Zero Panel Discussion on September 12, 2017 at 5:30 PM. If you cannot attend any event, please reach out to our e-board @ <a href="#">unruhassociates@gmail.com</a> and we can accommodate your application.
 
-							<br>(2) The written application is due September 18th.
+							<br>(2) The written application is due September 18, 2017.
 
-							<br>(3) An individual interview conducted sometime between September 20th - 22nd.</p>
+							<br>(3) An individual interview conducted sometime between September 20 - 22, 2017.</p>
 
 							<p>Applicants will be notified of their application status after the written application and interview rounds. Shortly after the interviews we will welcome our new members!</p>
 
 							<b>How long is the application process?</b>
 
-							<p>The application process takes about 7 days, from the written application due date on September 18th to final decisions on September 25th.</p>
+							<p>The application process takes about 7 days, from the written application due date on September 18 to final decisions on September 25.</p>
 							 
 							<b>What if I’m a freshman or have recently become interested in politics?</b>
 
