--- a/index.html
+++ b/index.html
@@ -1,6 +1,17 @@
 <!DOCTYPE HTML>
 <html>
 	<head>
+		<meta charset="utf-8">
+		<meta http-equiv="X-UA-Compatible" content="IE=edge">
+		<meta name="viewport" content="width=device-width, initial-scale=1.0">
+		<meta name="keywords" content="Unruh, Associates, Institute">
+		<meta name="description" content="Unruh Associates">
+		<meta name="author" content="Unruh Associates">
+
+		<link rel="shortcut icon" href="img/favicon.ico"> 
+		<link rel="stylesheet" href="css/index.css">
+
+	<title>Adam Grushan // Home</title>
 		<title>Unruh Associates</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
