--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
 		<meta charset="utf-8">
 		<meta http-equiv="X-UA-Compatible" content="IE=edge">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
-		<meta name="keywords" content="Unruh, Associates, Institute">
-		<meta name="description" content="Unruh Associates">
+		<meta name="keywords" content="Unruh, Associates, Institute, USC, University, Southern, California">
+		<meta name="description" content="Politically engaged students at the University of Southern California.">
 		<meta name="author" content="Unruh Associates">
 
 		<link rel="shortcut icon" href="img/favicon.ico"> 
