--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 		<meta name="keywords" content="Unruh, Associates, Institute, USC, University, Southern, California">
 		<meta name="description" content="Politically engaged students at the University of Southern California.">
 
-		<link rel="shortcut icon" href="img/favicon.ico"> 
+		<link rel="shortcut icon" href="images/favicon.ico"> 
 
 		<title>Unruh Associates</title>
 		<!--[if lte IE 8]><script src="assets/js/ie/html5shiv.js"></script><![endif]-->
