--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 		<meta charset="utf-8">
 		<meta http-equiv="X-UA-Compatible" content="IE=edge">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
-		<meta name="keywords" content="Unruh, Associates, Institute, USC, University, Southern, California">
+		<meta name="keywords" content="Unruh, Associates, Institute, USC, University, Southern, California, students, student, group, politics, government">
 		<meta name="description" content="Politically engaged students at the University of Southern California.">
 
 		<link rel="shortcut icon" href="images/favicon.ico"> 
