--- a/index.html
+++ b/index.html
@@ -225,8 +225,8 @@
 							 
 							<p>We want you here! Joining Unruh Associates is your opportunity to connect with political professionals through on-campus events and off-campus summits and foster civic discourse through impactful student-run events and intiatives. Apply for Fall 2017 starting August 30, 2017. 
 
-							<!--</p>
-							<p><a href="#" class="button big fit icon fa-external-link">Apply Here!</a></li></p>-->
+							</p>
+							<p><a href="#" class="button big fit icon fa-external-link">Apply Here!</a></li></p>
 						</div>
 
 				<!-- Five -->
