--- a/index.html
+++ b/index.html
@@ -226,7 +226,7 @@
 							<p>We want you here! Joining Unruh Associates is your opportunity to connect with political professionals through on-campus events and off-campus summits and foster civic discourse through impactful student-run events and intiatives. Apply for Fall 2017 starting August 30, 2017. 
 
 							</p>
-							<p><a href="https://docs.google.com/forms/d/e/1FAIpQLSeHL2o0Om2A-W68qm0FmXeV2gFm1sU7S4lyTfBqdtfGTBhSOw/viewform?fbzx=2135681420234684700" class="button big fit icon fa-external-link">Apply Here!</a></li></p>
+							<p><a href="https://docs.google.com/forms/d/e/1FAIpQLSeHL2o0Om2A-W68qm0FmXeV2gFm1sU7S4lyTfBqdtfGTBhSOw/viewform?fbzx=2135681420234684700" class="button big fit icon fa-external-link" target="_blank">Apply Here!</a></li></p>
 						</div>
 
 				<!-- Five -->
