--- a/index.html
+++ b/index.html
@@ -197,7 +197,7 @@
 
 							<p>(1) You must attend at least one of the following Unruh events before you submit your application: Unruh Open House at Bogardus Courtyard on August 29, 2017 at 5:30 PM OR Unruh Institute Panel Discussion at Ground Zero Cafe on September 12, 2017 at 5:30 PM. If you cannot attend any event, please reach out to our e-board @ <a href="#">unruhassociates@gmail.com</a> and we can accommodate your application.
 
-							<br>(2) The written application is due September 15, 2017.
+							<br>(2) The written application is due September 18, 2017 at 5:00 PM.
 
 							<br>(3) An individual interview conducted sometime between September 20 - 22, 2017.</p>
 
@@ -205,7 +205,7 @@
 
 							<b>How long is the application process?</b>
 
-							<p>The application process takes about 10 days, from the written application due date on September 15 to final decisions on September 25.</p>
+							<p>The application process takes about 7 days, from the written application due date on September 18 to final decisions on September 25.</p>
 							 
 							<b>What if I’m a freshman or have recently become interested in politics?</b>
 
