images and liaison

--- a/index.html
+++ b/index.html
@@ -176,7 +176,7 @@
 								</section>
 								<section>
 									<span class="icon major fa-location-arrow"></span>
-									<h3>Rachel Udabe, Institute Liason</h3>
+									<h3>Rachel Udabe, Institute Liaison</h3>
 									<img style = "width: 50%; height: auto" src= "images/pic17.jpg")/></a>
 									<p>Rachel Udabe is a senior from Cerritos, California, double-majoring in Political Science and Public Policy with a minor in Education and Society. She works as the Student Liaison for Unruh Associates. She recently interned at FutureEd, an independent education think tank from Georgetown University, as well as working in the Parent and Community Engagement division of Green Dot Public Charter Schools. On campus, she is a Tour Guide with the Office of Admission and a member of Society 53, and she also has volunteered as a tutor with the Joint Educational Project. Upon graduating, she hopes to teach abroad and earn a Masters in Public Policy, later entering the field of education policy.</p>
 								</section>
