jpg change for sophie photo

--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@
 								<section>
 									<span class="icon major fa-phone"></span>
 									<h3>Sophie Greensite, External Relations</h3>
-									<img style = "width: 50%; height: auto" src= "images/pic16.png")/></a>
+									<img style = "width: 50%; height: auto" src= "images/pic16.jpg")/></a>
 									<p>Sophie Greensite is a senior from Newport Beach, California, studying Political Economy. She currently works at Pluvious Group, a campaign finance firm in downtown Los Angeles. On campus, Sophie is involved with Programming Board’s Speakers Committee, College Democrats, and is a student ambassador for the Dornsife College of Letters, Arts and Sciences. Recently, Sophie was a weekly volunteer at Lawndale High School where she taught a sophomore history class about the intersection of climate change and international relations. Sophie enjoys partaking in research, having analyzed short-term vacation rental law in Los Angeles for public affairs firm Cerrell Associates. This fall she will provide research on electoral reform, a matter she finds to be paramount now more than ever. A self-proclaimed networker, Sophie hopes to work as a booking producer for a political news show.
 									</p>
 								</section>
