fb photo sharing

--- a/index.html
+++ b/index.html
@@ -7,6 +7,11 @@
 		<meta name="keywords" content="Unruh, Associates, Institute, USC, University, Southern, California, students, student, group, politics, government">
 		<meta name="description" content="Politically engaged students at the University of Southern California.">
 
+		<meta property="og:image" content="images/pic18.png">
+		<meta property="og:image:type" content="image/png">
+		<meta property="og:image:width" content="4999">
+		<meta property="og:image:height" content="2812">
+
 		<link rel="shortcut icon" href="images/favicon.ico"> 
 
 		<title>Unruh Associates</title>
