--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
 		<meta name="keywords" content="Unruh, Associates, Institute, USC, University, Southern, California, students, student, group, politics, government">
 		<meta name="description" content="Politically engaged students at the University of Southern California.">
 
-		<meta property="og:image" content="https://imgur.com/a/JnqMh">
-		<meta property="og:image:type" content="https://imgur.com/a/JnqMh">
+		<meta property="og:image" content="https://imgur.com/JW8DcnU">
+		<meta property="og:image:type" content="https://imgur.com/JW8DcnU">
 		<meta property="og:image:width" content="4999">
 		<meta property="og:image:height" content="2812">
 
