--- a/index.html
+++ b/index.html
@@ -7,10 +7,7 @@
 		<meta name="keywords" content="Unruh, Associates, Institute, USC, University, Southern, California, students, student, group, politics, government">
 		<meta name="description" content="Politically engaged students at the University of Southern California.">
 
-		<meta property="og:image" content="https://imgur.com/JW8DcnU">
-		<meta property="og:image:type" content="https://imgur.com/JW8DcnU">
-		<meta property="og:image:width" content="1250">
-		<meta property="og:image:height" content="625">
+		<meta property="og:image" content="https://i.imgur.com/JW8DcnU.png">
 
 		<link rel="shortcut icon" href="images/favicon.ico"> 
 
