--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
 		<meta name="description" content="Politically engaged students at the University of Southern California.">
 
 		<meta property="og:image" content="https://i.imgur.com/JW8DcnU.png">
+		<meta property="og:title" content="Unruh Associates">
+		<meta property="og:description" content="Politically engaged students at the University of Southern California.">
 
 		<link rel="shortcut icon" href="images/favicon.ico"> 
 
