added og:url tag

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 		<meta property="og:image" content="https://i.imgur.com/JW8DcnU.png">
 		<meta property="og:title" content="Unruh Associates">
 		<meta property="og:description" content="Politically engaged students at the University of Southern California.">
+		<meta property="og:url" content="http://unruhassociates.org">
 
 		<link rel="shortcut icon" href="images/favicon.ico"> 
 
