new photos and descriptions

--- a/index.html
+++ b/index.html
@@ -94,22 +94,22 @@
 								<section>
 									<span class="icon major fa-hand-peace-o"></span>
 									<h3>Chapter meetings</h3>
-									<p>After the Unruh Institute's Tuesday evening "Debating the Issues with ProCon" Ground Zero events, Associates meet biweekly to host intimate Q&As with panelists and update members on Associates' upcoming events.</p>
+									<p>Before the Unruh Institute's Tuesday evening Ground Zero events, Associates meet biweekly to host intimate Q&As with panelists and update members on Associates' upcoming programming.</p>
 								</section>
 								<section>
 									<span class="icon major fa-coffee"></span>
 									<h3>Lunches with Leaders</h3>
-									<p>We host luncheon roundtable discussions each semester to give Associates a chance to speak face-to-face with prominent political professionals.</p>
+									<p>We host lunches on week days each semester to give Associates a chance to meet face-to-face with prominent political professionals in a more informal setting at the Unruh Institute or the University Club.</p>
 								</section>
 								<section>
 									<span class="icon major fa-briefcase"></span>
-									<h3>Los Angeles Private Sector Summit</h3>
-									<p>Every semester, we take our members to a number of Los Angeles based public affairs firms and political technology companies to meet with political operatives. The trip to downtown Los Angeles includes a number of panels and an Unruh community partners mixer. If you have a strong desire to work in the private sector, this is an excellent opportunity to learn more about career opportunities and make an impression with the involved firms.</p>
+									<h3>Roundtable Discussions</h3>
+									<p>We host intimate roundtable discussions each semester on topics ranging from the Supreme Court, to nuclear proliferation, to environmental policy to give Associates a chance to discuss the prominent issues of the day in a civically engaged setting.</p>
 								</section>
 								<section>
 									<span class="icon major fa-institution"></span>
-									<h3>Los Angeles City Hall Summit</h3>
-									<p>Every semester, we take our members to Los Angeles City Hall to meet with legislators, staff members, and lobbyists. The trip includes a tour of City Hall, a number of panels, and an Unruh community partners mixer. If you have a strong desire to work for a public official, this is an excellent opportunity to learn more about career opportunities and make an impression with those serving in public office. </p>
+									<h3>Downtown Los Angeles Summit</h3>
+									<p>Every semester, Associates head to Los Angeles City Hall to meet with public and private sector professionals. The trip includes a tour of City Hall, a number of panels hosted in the Tom Bradley Room, and networking sessions after each panel. If you have a strong desire to work for a public official or in the private sector, this is an excellent opportunity to learn more about career opportunities and make an impression with those working in politics today. </p>
 								</section>
 								<section>
 									<span class="icon major fa-key"></span>
@@ -119,7 +119,7 @@
 								<section>
 									<span class="icon major fa-flag"></span>
 									<h3>Special Events, Competitions, and Programs</h3>
-									<p>Unruh Associates leads a number of other student-run events and intiatives, from leading USC's efforts on National Voter Regisration Day, to hosting public roundtable dicussions, to holding audience spots for Associates at CNN Town Halls.</p>
+									<p>Unruh Associates leads a number of other student-run events and intiatives, from leading USC's efforts on National Voter Regisration Day to holding audience spots for Associates at CNN Town Halls. As the nature of politics and governemrnt is in a constant state of change, we are always considering new ways of expanding our intiatives, and impact, on campus. </p>
 								</section>
 							</div>
 						</div>
