--- a/index.html
+++ b/index.html
@@ -133,14 +133,14 @@
 							<div class="features">
 								<section>
 									<span class="icon major fa-map"></span>
-									<h3>Dylan Quintero, President</h3>
+									<h3>Eleonora Viotto, President</h3>
 									<img style = "width: 50%; height: auto" src= "images/pic10.jpg")/></a>
 									<p>Dylan Quintero is a senior double majoring in Political Science and Public Relations. He is currently interning with Cerrell Associates, a public affairs firm that specializes in campaign management, crisis communications, government relations, and issue advocacy. During his time at USC, Dylan has interned with California Attorney General Xavier Becerra, Los Angeles Mayor Eric Garcetti, Metrolink, The Greek Theatre, and the Long Beach Convention and Visitors Bureau. On campus, he also serves as Vice President on the Public Relations Student Society of America’s executive board as and has worked for the on-campus public relations firm Tri-Sight Communications.
 									</p>
 								</section>
 								<section>
 									<span class="icon major fa-binoculars"></span>
-									<h3>Adam Grushan, Vice President</h3>
+									<h3>Oskar Muller, Vice President</h3>
 									<img style = "width: 50%; height: auto" src= "images/pic11.jpg")/></a>
 									<p>Born and raised in Boulder, Colorado, Adam Grushan is a senior double majoring in Economics and Political Science. He currently interns for The Raben Group, a progressive public affairs firm in downtown Los Angeles. His diverse set of experiences ranges from the development of unclaimed property procedure at Folio Investing, to campaign fundraising for Kathryn Barger’s Los Angeles County Supervisor race, to public safety and homeland security policy research for Los Angeles Mayor Eric Garcetti. Adam is involved on USC’s campus with Unruh Associates as Vice-President, the Economics Department as a tutor, and his fraternity Phi Delta Theta as a former secretary. He plans to best make use of his strengths as a leader, analytical thinker, and teammate after graduation.
 									</p>
