--- a/index.html
+++ b/index.html
@@ -147,16 +147,15 @@
 								</section>
 								<section>
 									<span class="icon major fa-users"></span>
-									<h3>Eleonora Viotto, Events Manager</h3>
+									<h3>Srividya Dasaraju, Director of Programmingr</h3>
 									<img style = "width: 50%; height: auto" src= "images/pic12.jpg")/></a>
-									<p>Eleonora Viotto, from Seattle, Washington, is a sophomore double majoring in Political Science and Communications. She has previously interned at the Pluvious Group in Downtown Los Angeles as well as volunteered with Rep. Dave Reichert’s (WA-8) office. Most recently, Eleonora interned with Blue Wave Politics in Seattle, WA, working on Maria Cantwell’s re-election campaign, Jenny Durkan’s bid for Seattle Mayor, as well as a variety of local and state races. On campus, Eleonora is a Presidential Scholar and a member of the Trojans Scholars Society, as well as a Residential Assistant for the 2017-2018 school year. Furthermore, she is a member of the Political Science Honors program for freshmen and sophomores. Eleonora is also a staff writer and copy editor for the Daily Trojan, as well as a member of Phi Alpha Delta, USC's Pre-Law Fraternity. After graduating from USC, she plans on attending law school and studying corporate law.
-									</p>
+									<p>Srividya Dasaraju is a sophomore from Topeka, Kansas majoring in International Relations. Her academic interests include security and terrorism studies, international law, and the politics of climate change. Last summer Srividya interned for Senate Minority Chuck Schumer in DC. She has also previously interned for the Kansas Democratic Party. On campus, she is on the Trojan Policy Debate Team, an associate editor for the Journal of Law and Society, a contributor to Glimpse from the Globe, a member of Phi Alpha Delta, and Campus Events co-coordinator for SCIA. Srividya is also a research assistant for Professor Markowitz in the Security Political Economy Lab where she helps research the relationship between Arctic resource competition and states’ power projection.  Upon graduating, she hopes to attend law school, later entering the field of defense policy.
 								</section>
 								<section>
 									<span class="icon major fa-desktop"></span>
-									<h3>Samantha Kosai, Publicity Director</h3>
+									<h3>Misa Buscemi, Director of Publicity</h3>
 									<img style = "width: 50%; height: auto" src= "images/pic13.jpg")/></a>
-									<p>Samantha Kosai is a sophomore from Irvine, California, studying Sociology. She currently works as a research assistant for the USC Center for Urban Education, focusing on racial equity in university transfer and retention rates, as well as independently researching the interdisciplinary relationship of politics, race, education, and the arts. Sam also serves as President of Oriana, the classical women’s choir, and loves embracing her biracial heritage by being involved in El Centro Chicano and Asian Pacific American Student Services. She is humbled to be working as a Residential Assistant this year and serving as an Undergraduate Fellow for the Center of Excellence in Teaching. In the future, she hopes to earn a doctorate degree and pursue a career as a professor.</p>
+									<p>Misa Buscemi is a sophomore from Buffalo, NY, double majoring in Political Science and Public Relations. She has previously interned for Senate Minority Leader Chuck Schumer and volunteered on the reelection campaign of Mayor Byron Brown in Buffalo, NY.  She is passionate about journalism and credible reporting in the current political climate. She works as a journalist in the USC Annenberg Media Center on a project that attempts to inform students on how to stay civically engaged. She is also a member of Phi Alpha Delta, USC’s Pre-Law fraternity. In the future, she hopes to attend law school and work on political campaigns.</p>
 								</section>
 								<section>
 									<span class="icon major fa-pencil"></span>
@@ -178,12 +177,6 @@
 									<img style = "width: 50%; height: auto" src= "images/pic16.jpg")/></a>
 									<p>José Gutiérrez is a sophomore, pursuing a Political Science and Philosophy double major with a minor in Behavioral Economics, and an international student from Mexico City. After interning at Fundación ProEmpleo Distrito Federal, an NGO and business incubator that fosters Mexican entrepreneurship, José was inspired to explore civic engagement and advocacy. Hence, he joined Undergraduate Student Government as an advocacy delegate and founded defrACT, a student organization that produces public art installations on contemporary social issues, for which he serves as Co-President. José also teaches civics at a local high school through the Unruh Action Civics, Civic Engagement program. He also interned at the Mexico City office of Korn/Ferry International, one of the best international headhunting firms. Previously, José was a trumpet player in the “greatest marching band in the history of the universe (ever)!” which is naturally USC’s own Spirit of Troy. In the future, José hopes to work in a think tank, urban development and be a writer during his spare time (which really means he has no real clue what he wants to do)
 									</p>
-								</section>
-								<section>
-									<span class="icon major fa-location-arrow"></span>
-									<h3>Rachel Udabe, Institute Liaison</h3>
-									<img style = "width: 50%; height: auto" src= "images/pic17.jpg")/></a>
-									<p>Rachel Udabe is a senior from Cerritos, California, double-majoring in Political Science and Public Policy with a minor in Education and Society. She works as the Student Liaison for Unruh Associates. She recently interned at FutureEd, an independent education think tank from Georgetown University, as well as working in the Parent and Community Engagement division of Green Dot Public Charter Schools. On campus, she is a Tour Guide with the Office of Admission and a member of Society 53, and she also has volunteered as a tutor with the Joint Educational Project. Upon graduating, she hopes to teach abroad and earn a Masters in Public Policy, later entering the field of education policy.</p>
 								</section>
 							</div>
 						</div>
