--- a/index.html
+++ b/index.html
@@ -203,7 +203,7 @@
 
 							<b>How long is the application process?</b>
 
-							<p>The application process takes about 7 days from the written application due date on January 23 to final decisions.</p>
+							<p>The application process takes about 7 days from the written application due date on January 23, 2018 to final decisions.</p>
 
 							<b>What if I’m a freshman or have recently become interested in politics?</b>
 
