--- a/index.html
+++ b/index.html
@@ -104,12 +104,12 @@
 								<section>
 									<span class="icon major fa-briefcase"></span>
 									<h3>Roundtable Discussions</h3>
-									<p>We host intimate roundtable discussions each semester on topics ranging from the Supreme Court, to nuclear proliferation, to environmental policy to give Associates a chance to discuss the prominent issues of the day in a civically engaged setting.</p>
+									<p>Associates host intimate roundtable discussions each semester on topics ranging from the Supreme Court, to nuclear proliferation, to environmental policy to give Associates a chance to discuss the prominent issues of the day in a civically engaged setting.</p>
 								</section>
 								<section>
 									<span class="icon major fa-institution"></span>
 									<h3>Downtown Los Angeles Summit</h3>
-									<p>Every semester, Associates head to Los Angeles City Hall to meet with public and private sector professionals. The trip includes a tour of City Hall, a number of panels hosted in the Tom Bradley Room, and networking sessions after each panel. If you have a strong desire to work for a public official or in the private sector, this is an excellent opportunity to learn more about career opportunities and make an impression with those working in politics today. </p>
+									<p>Every semester, Associates head to Los Angeles City Hall to meet with public and private sector professionals. The trip includes a tour of City Hall, panels hosted in the Tom Bradley Room, and networking sessions. If you have a strong desire to work in politics, this is an excellent opportunity to learn more about career opportunities and make an impression with those working in politics today. </p>
 								</section>
 								<section>
 									<span class="icon major fa-key"></span>
@@ -119,7 +119,7 @@
 								<section>
 									<span class="icon major fa-flag"></span>
 									<h3>Special Events, Competitions, and Programs</h3>
-									<p>Unruh Associates leads a number of other student-run events and intiatives, from leading USC's efforts on National Voter Regisration Day to holding audience spots for Associates at CNN Town Halls. As the nature of politics and governemrnt is in a constant state of change, we are always considering new ways of expanding our intiatives, and impact, on campus. </p>
+									<p>Unruh Associates leads a number of other student-run events and intiatives, from leading USC's efforts on National Voter Regisration Day to holding audience spots for Associates at CNN Town Halls. As the nature of politics and government is in a constant state of change, we always consider new ways of expanding our intiatives on campus. </p>
 								</section>
 							</div>
 						</div>
@@ -181,6 +181,10 @@
 								<section>
 									<span class="icon major fa-phone"></span>
 									<h3>Adam Grushan and Sophie Greensite, Senior Advisers</h3>
+									<img style = "width: 50%; height: auto" src= "images/pic17.png")/></a>
+									<img style = "width: 50%; height: auto" src= "images/pic18.jpg")/></a>
+									<p>Adam Grushan and Sophie Greensite served on the inaugural Associates Executive Board as Vice President and Director of External Relations respectively. Jointly, they revamped the admissions process to drive engagement, managed a new event schedule to better connect students with mentors in politics, and moderated regular panels and roundtables on a range of issue areas. Adam is a senior double majoring in Economics and Political Science, and Sophie is a senior studying Political Economy. After graduation, Adam will be consulting on financial, economic and accounting damages issues as an associate at TM Financial Forensics, and Sophie, who currently interns in the talent management space, hopes to work as a talent agent. 
+									</p>
 								</section>
 							</div>
 						</div>
