--- a/index.html
+++ b/index.html
@@ -175,7 +175,7 @@
 									<span class="icon major fa-phone"></span>
 									<h3>Jose Gutierrez, Director of External Relations</h3>
 									<img style = "width: 50%; height: auto" src= "images/pic16.jpg")/></a>
-									<p>José Gutiérrez is a sophomore, pursuing a Political Science and Philosophy double major with a minor in Behavioral Economics, and an international student from Mexico City. After interning at Fundación ProEmpleo Distrito Federal, an NGO and business incubator that fosters Mexican entrepreneurship, José was inspired to explore civic engagement and advocacy. Hence, he joined Undergraduate Student Government as an advocacy delegate and founded defrACT, a student organization that produces public art installations on contemporary social issues, for which he serves as Co-President. José also teaches civics at a local high school through the Unruh Action Civics, Civic Engagement program. He also interned at the Mexico City office of Korn/Ferry International, one of the best international headhunting firms. Previously, José was a trumpet player in the “greatest marching band in the history of the universe (ever)!” which is naturally USC’s own Spirit of Troy. In the future, José hopes to work in a think tank, urban development and be a writer during his spare time (which really means he has no real clue what he wants to do)
+									<p>José Gutiérrez is a sophomore, pursuing a Political Science and Philosophy double major with a minor in Behavioral Economics, and an international student from Mexico City. After interning at Fundación ProEmpleo Distrito Federal, an NGO and business incubator that fosters Mexican entrepreneurship, José was inspired to explore civic engagement and advocacy. Hence, he joined Undergraduate Student Government as an advocacy delegate and founded defrACT, a student organization that produces public art installations on contemporary social issues, for which he serves as Co-President. José also teaches civics at a local high school through the Unruh Action Civics, Civic Engagement program. He also interned at the Mexico City office of Korn/Ferry International, one of the best international headhunting firms. Previously, José was a trumpet player in the “greatest marching band in the history of the universe (ever)!” which is naturally USC’s own Spirit of Troy. In the future, José hopes to work in a think tank, urban development and be a writer during his spare time (which really means he has no real clue what he wants to do).
 									</p>
 								</section>
 								<section>
@@ -203,9 +203,9 @@
 
 							<p>(1) You must attend the Unruh Open House in SOS B15 on January 17, 2018 at 5:30 PM. If you cannot attend this event, please reach out to our e-board @ <a href="#">unruhassociates@gmail.com</a> and we can accommodate your application.
 
-							<br>(2) The written application opens January 18, 2018, and is due January 23, 2018 at 5:00 PM.
+							<br>(2) The written application opens January 18, 2018 and is due January 23, 2018 at 5:00 PM.
 
-							<br>(3) An individual interview conducted sometime between January 24- 25, 2018.</p>
+							<br>(3) An individual interview conducted sometime between January 24-25, 2018.</p>
 
 							<p>Applicants will be notified of their application status after the written application and interview rounds. Shortly after the interviews we will welcome our new members!</p>
 
