--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@
 									</p>
 								</section>
 								<section>
-									<span class="icon major rocket"></span>
+									<span class="icon major fa-hand-peace-o"></span>
 									<h3>Adam Grushan and Sophie Greensite, Senior Advisers</h3>
 									<img style = "width: 50%; height: auto" src= "images/pic18.jpg")/></a>
 									<img style = "width: 50%; height: auto" src= "images/pic17.png")/></a>
