--- a/index.html
+++ b/index.html
@@ -193,7 +193,7 @@
 
 							<b>What is the application process?</b>
 
-							<p>(1) You must attend the Unruh Open House in SOS B15 on January 17, 2018 at 5:30 PM. If you cannot attend this event, please reach out to our e-board @ <a href="#">unruhassociates@gmail.com</a> and we can accommodate your application.
+							<p>(1) You must attend the Unruh Open House in SOS B15 on January 17, 2018 at 5:30 PM. If you cannot attend this event, please reach out to our executive board at <a href="#">unruhassociates@gmail.com</a> and we can accommodate your application.
 
 							<br>(2) The written application opens January 18, 2018, and is due January 23, 2018 at 5:00 PM.
 
